--- a/Spring-gms-master/src/main/webapp/WEB-INF/web.xml
+++ b/Spring-gms-master/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>appServlet</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern>/</url-pattern> <!-- homeCountroller로 들어감 -->
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>default</servlet-name>
